pastey-test-suite/tests/ui/invalid-group-token.stderr
error: Expected either Ident, or Literal.
  --> tests/ui/invalid-group-token.rs:11:4
   |
11 | m!((a b));
   |    ^^^^^
